# albatross

./: Cargo.toml  README.md  docker-compose.yml
database/: Cargo.toml  init.sql
database/src/: pool.rs
feed-fetcher/: Cargo.toml
feed-fetcher/src/: article_handlers.rs  feed_handlers.rs  fetcher.rs  lib.rs  parser.rs  worker.rs
models/: Cargo.toml
models/src/: db.rs  models.rs  rest.rs
src/: lib.rs  main.rs  routing.rs
src/routing/: mod.rs
