[package]
name = "albatross"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["models", "feed-fetcher", "database"]

[dependencies]
models = { path = "models"}
feed-fetcher = { path = "feed-fetcher"}
database ={ path = "database"}
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
