[package]
name = "feed-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
axum = { version = "0.8.7", features = ["macros"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
reqwest = "0.12.28"
rss = "2.0.12"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["macros", "derive", "postgres", "runtime-tokio", "uuid"] }
